Visual Changes made and Still Working with prompts

--- a/index.html
+++ b/index.html
@@ -8,8 +8,30 @@
     <title>Rock Paper Scissors?</title>
 </head>
 <body>
-    <div><h1 >This is My Rock Paper Scissors</h1>
-    <img src="rock-paper-scissors.png" alt=""></div>
+    <!-- <--------- NAVBAR HERE ---------->
+    <header>
+        <div class="container">
+          <div class="logo-box">
+            <a style="width: 300px ;" href="/">
+              <img src="rock-paper-scissors.png">
+            </a>
+          </div>
+          <nav>
+          <ul>
+            <li><a href="">home</a></li>
+            <li><a href="">work</a></li>
+            <li><a href="">product</a></li>
+            <li><a href="">about</a></li>
+            <li><a href="">contact</a></li>
+         </ul>
+        </nav>
+        </div>
+      </header>
+
+
+    <img id="back" src="olga-thelavart-RyrFRsVoe2Q-unsplash.jpg" alt="">
+    <div class="tit" ><h1 >My <br> Rock <br> Paper <br> Scissors</h1>
+    <img id="cen" src="rock-paper-scissors.png" alt=""></div>
     
 </body>
 <script src="scrip.js"></script>
