--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <ul>
             <li><a href="">home</a></li>
             <li><a href="">work</a></li>
-            <li><a href="">product</a></li>
+            <li><button onclick="game()" >PLAY</button></li>
             <li><a href="">about</a></li>
             <li><a href="">contact</a></li>
          </ul>
